test_suite/tests/ui/with-variant/skip_ser_newtype_field.stderr
error: variant `Newtype` cannot have both #[serde(serialize_with)] and a field 0 marked with #[serde(skip_serializing)]
 --> $DIR/skip_ser_newtype_field.rs:4:10
  |
4 | #[derive(Serialize)]
  |          ^^^^^^^^^

error: aborting due to previous error

